# derive_recursive

./: Cargo.toml  LICENSE  README.md
examples/: basic.rs  generics.rs  test.rs  trait_with_more_items.rs
src/: lib.rs
