[package]
name = "derive_recursive"
version = "0.0.0"
authors = ["DragonGamesStudios <margos.michal@gmail.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro", "utility"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "2.0.57", features = ["full", "extra-traits"] }

