[package]
name = "derive_recursive"
version = "1.0.2"
authors = ["DragonGamesStudios <margos.michal@gmail.com>"]
description = "A utility derive macro for recursive trait implementations."
keywords = ["proc_macro", "procmacro", "utility", "recursive", "auto"]
edition = "2021"
license = "MIT"
repository = "https://github.com/DragonGamesStudios/derive_recursive.git"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "2.0.57", features = ["full", "extra-traits"] }

